tp2/front/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: front 
    spec:
      containers:
      - name: front 
        image: registry.gitlab.com/takima-school/images/cdb/www:latest  
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080 
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080 
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
        - name: takima-school-registry
