tp2/front/front-service.yml

apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front 
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 8080
